[package]
name = "uniswap-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
ethabi = "16.0.0"
ethereum-types = "0.13.1"
ethereum_abi = "0.4.0"
futures = "0.3.25"
hex = "0.4.3"
hex-literal = "0.3.4"
num-bigfloat = "1.6.0"
num-bigint = "0.4.3"
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros"] }
web3 = "0.18.0"
